--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "This is the backend part of our zomato alike app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js",
+    "dev" :"nodemon app.js"
   },
   "keywords": [
     "Node",
